@@ -1607,7 +1607,10 @@ bool CGUIWindowBuddies::GetGamePathFromTitleId(DWORD aTitleId, CStdString& aGame
   for (unsigned int i = 0; i < g_settings.m_vecMyProgramsBookmarks.size(); i++)
   {
     CShare &share = g_settings.m_vecMyProgramsBookmarks[i];
-    gamesDirs.push_back(share.strPath);
+    CStdStringArray paths;
+    StringUtils::SplitString(share.strPath, ",", paths);
+    for (unsigned int j = 0; j < paths.size(); j++)
+      gamesDirs.push_back(paths[j]);
   }
 
   for (int i = 0; i < (int)gamesDirs.size(); ++i)
